updated to launcher 1.5.2